--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"axios": "^0.24.0",
 		"framer-motion": "^4",
 		"leaflet": "^1.7.1",
+		"leaflet.markercluster": "^1.5.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-query": "^3.31.0",
