--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"not op_mini all"
 	],
 	"devDependencies": {
-		"@types/leaflet": "^1.7.5"
+		"@types/leaflet": "^1.7.5",
+		"@types/react-window": "^1.8.5"
 	}
 }
