--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"framer-motion": "^4",
 		"leaflet": "^1.7.1",
 		"leaflet-canvas-markers": "^1.0.7",
+		"lodash.groupby": "^4.6.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-query": "^3.31.0",
