--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"framer-motion": "^4",
 		"leaflet": "^1.7.1",
 		"leaflet-canvas-markers": "^1.0.7",
+		"leaflet.heat": "^0.2.0",
 		"lodash.groupby": "^4.6.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -29,7 +30,7 @@
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"start": "DEBUG=ebay:* react-scripts start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
